# stocks-with-gaurav

./: .claudeignore  .cursorignore  .dockerignore  .env.example  .gitignore  .go_live_config.example  AI_LEARNING_GUIDE.md  CLAUDE.md  CLOUD_DEPLOYMENT_AUDIT.md  CLOUD_READY_CHECKLIST.md  CURSOR_SETUP_CHECKLIST.md  DAILY_RUN_CHECKLIST.md  DEPLOYMENT_BUGS.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.engine  EVERYTHING_ON_CLOUD.md  GITHUB_AS_SOURCE.md  GO_LIVE_README.md  LIVE_OPTIONS_MONITOR_FIXES.md  PAPER_TRADING_CHECKLIST.md  PHASE2_CODEBASE_AUDIT.md  PHASE5_LIVE_DEPLOYMENT_READINESS.md  PHASE6_FINAL_REPORT.md  PRODUCTION_SETUP.md  RAILWAY_DEPLOY.md  SETUP_NOW.md  SYSTEM_OVERVIEW.md  auto_login.py  backtest_jan_feb_2026_trades.csv  backtest_setupd_jan_mar2026.csv  cov.json  cv.json  engine_runtime.py  go_live.bat  go_live.ps1  h.json  l.txt  log_trade.py  lt.json  (+47 more)
CLICK ONCE to START/: ARCHIVE_SIGNALS.bat  AUTO_CONTENT_GENERATE.bat  AUTO_POST_MARKET.bat  AUTO_POST_MARKET_CONTENT.bat  AUTO_PRE_MARKET.bat  GENERATE_POST_MARKET_POST.bat  GENERATE_PRE_MARKET_POST.bat  ON_LOGIN_CONTENT_CATCHUP.bat  README_RAILWAY_ONLY.md  RUN_ENGINE_ON_LOCAL.bat  RUN_ENGINE_ON_RAILWAY.bat  SCHEDULE_DAILY_POSTS.ps1  SCHEDULE_SIGNAL_ARCHIVE.ps1  SYSTEM_BIBLE.md  SYSTEM_OVERVIEW.md  go_live.bat  morning_login.bat  morning_login.ps1  sync.bat
Content Creation/: .env.example  .gitignore  README.md  __init__.py  generate_setup_charts.py  main.py
agents/: base.py  longterm_investment_agent.py  oi_intelligence_agent.py  post_market.py  pre_market.py  reasoning_validator.py  risk_sentinel.py  runner.py  swing_alpha_agent.py  trade_manager.py
ai_learning/: __init__.py  cli.py  config.py  live_scanner.py  (+3 more)
(+409 files in other folders)
