[project]
name = "trading-algo"
version = "2.0.0"
description = "AI-Powered SMC Trading System with Multi-Agent Architecture"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = [".", "agents", "ai_learning", "backtest", "dashboard", "engine", "smc_trading_engine", "utils"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "ai_learning", "backtest", "dashboard", "engine", "smc_trading_engine", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests", "smc_trading_engine/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -x"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring API keys",
    "backtest: marks backtesting tests",
    "live: marks tests requiring live market data",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
source = ["agents", "ai_learning", "backtest", "engine", "smc_trading_engine"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 40
